adjusts setup script

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [install]
-install-purelib=C:\projects\tech\tools\maya\scripts\bo
-install-platlib=C:\projects\tech\tools\maya\scripts\bo
-install-scripts=C:\projects\tech\tools\maya\scripts\bo
-install-data=C:\projects\tech\tools\maya\scripts\bo
+install-purelib=C:\moonbot\tech\maya\scripts\bo
+install-platlib=C:\moonbot\tech\maya\scripts\bo
+install-scripts=C:\moonbot\tech\maya\scripts\bo
+install-data=C:\moonbot\tech\maya\scripts\bo
 
 [egg_info]
 tag_build = dev
